--- a/src/main/resources/templates/member/myInquiryList.html
+++ b/src/main/resources/templates/member/myInquiryList.html
@@ -11,7 +11,7 @@
     <div class="List-con">
         <div class="List-title">
             <div class="title">
-                <h1>문의사항 <img th:src="@{/images/inquiry.png}" alt="notice"></h1>
+                <h1>내 문의사항 <img th:src="@{/images/inquiry.png}" alt="notice"></h1>
             </div>
         </div>
         <div class="search">
@@ -91,6 +91,6 @@
         </div>
     </div>
 </div>
-</body>
 <div th:replace="~{fragments/common/footer :: footerFragment}"></div>
+</body>
 </html>
