--- a/src/main/resources/templates/semiMember/cart.html
+++ b/src/main/resources/templates/semiMember/cart.html
@@ -1,51 +1,62 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head>
-    <meta charset="UTF-8">
-    <title>장바구니</title>
-</head>
-<body>
-<!--<div th:replace="~{fragments/header :: headerFragment}"></div>-->
-<h1 class="title"><span th:text="${semiMember.semiMemberEmail}" ></span>님 장바구니</h1>
-<div class="table-responsive">
-    <table class="table table-striped table-sm">
-        <thead>
-        <tr>
-            <th scope="col">번호</th>
-            <th scope="col">상품ID</th>
-            <th scope="col">상품이미지</th>
-            <th scope="col">상품명</th>
-            <th scope="col">수량</th>
-            <th scope="col">가격</th>
-            <th scope="col">담은날짜</th>
-            <th scope="col">삭제</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="cartItem, i: ${cartItems}">
-            <td th:text="${i.count}">장바구니상품 번호</td>
-            <td th:text="${cartItem.getProduct().getId()}">상품ID</td>
-            <td>
-                <th:block th:each="img : ${productImages}">
-                    <!-- 상품 ID에 해당하는 이미지만 출력 -->
-                    <th:block th:if="${cartItem.getProduct().getId()} == ${img.id}">
-                        <a th:href="@{/product/{id}(id=${cartItem.getProduct().getId()})}"> <!-- 상세보기 페이지로 이동-->
-                        <img th:src="@{/images/{filename}(filename=${img.productImgSavedName})}" alt="" height="50"/>
-                    </th:block>
-                </th:block>
-            </td>
-            <td>
-                <a th:href="@{/product/{id}(id=${cartItem.getProduct().getId()})}" th:text="${cartItem.getProduct().getProductName()}">상품명</a>
-            </td>
-            <td th:text="${cartItem.getCartItemCount()}">수량</td>
-            <td th:text="${cartItem.getProduct().getProductPrice() * cartItem.getCartItemCount()}">가격</td>
-            <td th:text="${cartItem.getCart().getCreateTime()}">날짜</td>
-            <td class="btn btn-outline-dark"><a th:href="@{/cart/semiMember/{semiMemberId}/{cartItemId}/delete(semiMemberId=${cartItem.getCart().getSemiMember().getSemiMemberId()}, cartItemId=${cartItem.getCartItemId()})}" style="text-decoration: none">삭제</a></td>
-        </tr>
-        </tbody>
-    </table>
-총가격 : <span th:text="${totalPrice}">총가격</span>
-</div>
-</body>
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{fragments/layout/baseLayout}">
+<th:block layout:fragment="title">
+    <title>Cloth Keeper</title>
+</th:block>
+<th:block layout:fragment="css">
+    <link rel="stylesheet" th:href="@{/css/index.css}">
+    <link rel="stylesheet" th:href="@{/css/cart/cart.css}">
+    <link rel="stylesheet" href="maincss.css">
+</th:block>
+<th:block layout:fragment="script">
+</th:block>
+<th:block layout:fragment="container">
+    <h1 class="title"><span th:text="${semiMember.semiMemberEmail}" ></span>님 장바구니</h1>
+    <div class="contianer">
+        <div class="main">
+            <table class="cartTable">
+                <thead>
+                <tr>
+                    <th scope="col">번호</th>
+                    <th scope="col">상품ID</th>
+                    <th scope="col">상품이미지</th>
+                    <th scope="col">상품명</th>
+                    <th scope="col">수량</th>
+                    <th scope="col">가격</th>
+                    <th scope="col">담은날짜</th>
+                    <th scope="col">삭제</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="cartItem, i: ${cartItems}">
+                    <td th:text="${i.count}">장바구니상품 번호</td>
+                    <td th:text="${cartItem.getProduct().getId()}">상품ID</td>
+                    <td>
+                        <th:block th:each="img : ${productImages}">
+                            <!-- 상품 ID에 해당하는 이미지만 출력 -->
+                            <th:block th:if="${cartItem.getProduct().getId()} == ${img.id}">
+                                <a th:href="@{/product/{id}(id=${cartItem.getProduct().getId()})}"> <!-- 상세보기 페이지로 이동-->
+                                <img th:src="@{/images/{filename}(filename=${img.productImgSavedName})}" alt="" height="50"/>
+                            </th:block>
+                        </th:block>
+                    </td>
+                    <td>
+                        <a th:href="@{/product/{id}(id=${cartItem.getProduct().getId()})}" th:text="${cartItem.getProduct().getProductName()}">상품명</a>
+                    </td>
+                    <td th:text="${cartItem.getCartItemCount()}">수량</td>
+                    <td th:text="${cartItem.getProduct().getProductPrice() * cartItem.getCartItemCount()}">가격</td>
+                    <td th:text="${cartItem.getCart().getCreateTime()}">날짜</td>
+                    <td class="btn btn-outline-dark"><a
+                            th:href="@{/cart/semiMember/{semiMemberId}/{cartItemId}/delete(semiMemberId=${cartItem.getCart().getSemiMember().getSemiMemberId()}, cartItemId=${cartItem.getCartItemId()})}"
+                            style="text-decoration: none">삭제</a></td>
+                    <td><a href="#">결제</a></td>
+                </tr>
+                </tbody>
+            </table>
+            총가격 : <span th:text="${totalPrice}">총가격</span>
+        </div>
+    </div>
+</th:block>
 </html>
