--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -62,11 +62,11 @@
                     </ul>
                 </li>
                 <li>
-                    <div class="sec1-title">배송</div>
+                    <div class="sec1-title">회원 목록</div>
                     <ul class="sec1-item">
-                        <li>주문별 배송 상태</li>
-                        <li>상품별 주문 상태</li>
-                        <li>배송 현황 보기</li>
+                        <li><a th:href="@{/member/pagingList?page=0&subject=&search=}">회원 목록</a></li>
+                        <li><a th:href="@{/semiMember/pagingList?page=0&subject=&search=}">간편회원 목록</a></li>
+                        <li>비고</li>
                         <li>비고</li>
                     </ul>
                 </li>
