--- a/src/main/resources/templates/admin/fragments/common/header.html
+++ b/src/main/resources/templates/admin/fragments/common/header.html
@@ -15,7 +15,7 @@
                 </th:block>
 
                 <th:block sec:authorize="hasAnyRole('ADMIN')">
-                    <li><a href="/member/logout">고객 관리</a></li>
+                    <li><a href="#">고객 관리</a></li>
                 </th:block>
             </ul>
         </div>
