--- a/src/main/resources/templates/fragments/common/header.html
+++ b/src/main/resources/templates/fragments/common/header.html
@@ -59,7 +59,7 @@
         </div>
         <div class="middle-nav">
             <h1>
-                <a th:href="@{/}"><img th:src="@{/images/logo3.png}" alt="HOME"></a>
+                <a th:href="@{/}"><img th:src="@{/images/logo.png}" alt="HOME"></a>
             </h1>
             <div class="middle-menu">
                 <ul>
