--- a/src/main/resources/static/css/common/header.css
+++ b/src/main/resources/static/css/common/header.css
@@ -49,13 +49,10 @@
     display: flex;
     justify-content: space-between;
 }
-.header .nav .middle-nav h1{
-    flex-basis: 120px; /* logo 이미지 삽입 시 flex기본 크기 설정 */
+.header .nav .middle-nav {
+    flex-basis: 80px; /* logo 이미지 삽입 시 flex기본 크기 설정 */
 }
-.header .nav .middle-nav h1 a image{
-    /* width: 100%; */
-    width: 120px;
-    height: 60px;
+.header .nav .middle-nav a img{
     height: auto;
     display: block;
     background: transition;
@@ -167,9 +164,9 @@
     align-items: center;
     justify-content: center;
     /* line-height: 1; */
-    color: #8e7aff;
+    color: #16046d;
     font-size: 20px;
-    text-shadow: 4px 0px 3px #b9adff;
+    text-shadow: 4px 0px 3px #2000be76;
     font-weight: bold;
  }
  /* 마우스 올리면 밑줄 생성 */
