--- a/src/main/resources/static/css/notice/list.css
+++ b/src/main/resources/static/css/notice/list.css
@@ -174,6 +174,7 @@ table, th, td{
     gap: 5px;
     padding: 5px;
     box-sizing: border-box;
+    align-items: flex-end;
 }
 .List .List-con .page >ul>li{
 }
@@ -182,6 +183,7 @@ table, th, td{
     display: flex;
     justify-content: center;
     gap: 5px;
+    border: 2px solid #c5c5c5;
 }
 .List .List-con .page > ul> li.block a{
     font-weight:bold;
@@ -189,14 +191,14 @@ table, th, td{
     display:block;
 }
 .List .List-con .page > ul> li span{
-   font-size:12px;
+   font-size:15px;
 }
 .List .List-con .page > ul> li a{
   font-size:12px;
   font-weight:bold;
 }
 .List .List-con .page > ul> li span.span0{
-  color: #4E815F;
+  color: #9E8BFF;
   font-weight:bold;
   padding:2px 10px;
   border-radius:5px;
@@ -204,5 +206,5 @@ table, th, td{
 .List .List-con .pages > ul> li span a.span1{
   padding:2px 10px;
   font-weight: bold;
-  color: #4E815F;
+  color: #9E8BFF;
 }
