--- a/src/main/resources/templates/member/cart.html
+++ b/src/main/resources/templates/member/cart.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" th:href="@{/css/index.css}">
     <link rel="stylesheet" th:href="@{/css/cart/cart.css}">
     <link rel="stylesheet" href="maincss.css">
+    <script th:src="@{/js/payment/payment.js}" defer="defer"></script>
 </th:block>
-<th:block layout:fragment="script">
-</th:block>
+
 <th:block layout:fragment="container">
     <h1 class="title"><span th:text="${member.memberNickName}" ></span>님 장바구니</h1>
     <h1 class="title1"><span th:text="${member.memberId}"></span>회원번호</h1>
@@ -55,12 +55,25 @@
                     <td class="btn btn-outline-dark"><a
                             th:href="@{/cart/member/{memberId}/{cartItemId}/delete(memberId=${cartItem.getCart().getMember().getMemberId()}, cartItemId=${cartItem.getCartItemId()})}"
                             style="text-decoration: none">삭제</a></td>
-                    <td><a href="#">결제</a></td>
-                </tr>
+
+                    <td>
+                        <th:block th:each="product: ${productList}">
+                            <button id="payment-button" th:value="@{/payment/kakao/pg(productId=${product.id}, memberId=${member.memberId}, productPrice=${product.productPrice}, productName=${product.productName})}">
+                                결제
+                            </button>
+                        </th:block>
+                    </td>
                 </tbody>
             </table>
             총가격 : <span th:text="${totalPrice}">총가격</span>
         </div>
     </div>
 </th:block>
+
+<!--<a th:href=@{"/payment/kakao/pg?{productId=123&memberId=123&productPrice=100000&productName=testProduct"}></a>-->
+
+<script>
+
+</script>
+
 </html>
