--- a/src/main/resources/static/css/cart/cart.css
+++ b/src/main/resources/static/css/cart/cart.css
@@ -1,4 +1,6 @@
 @import url(/css/common/reset.css);
+@import url(/css/common/header.css);
+@import url(/css/common/footer.css);
 
 button{
   border: 0;
@@ -6,10 +8,21 @@ button{
 }
 
 .contianer{
-
+  width: 100%;
   background-color: #F0F2F5;
 }
-
+.contianer .main{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.container .main .title{
+  padding: 20px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 2px solid #7285d3a4;
+}
 
 table {
   width: 70%;
@@ -19,20 +32,22 @@ table {
   font-family: 'Cairo', sans-serif;
   margin: 20px auto;
 }
-
 table td {
   padding: 10px;
   background-color: #CDD4EF
 }
-
 table th {
   background-color: #7286D3;
   color: #fff;
   padding: 10px;
 }
-
 img {
   width: 90px;
   height: 90px;
+}
+
+
+table span{
+  font-size: 20px;
 }
 
