--- a/src/main/resources/static/css/common/footer.css
+++ b/src/main/resources/static/css/common/footer.css
@@ -7,6 +7,8 @@
 .footer .nav{
     width: 1400px;
     padding: 40px 0 60px 0;
+    margin: 0 auto;
+    flex-direction: column;
 }
 .footer .nav a h2{
     padding: 10px;
