--- a/src/main/resources/templates/member/cart.html
+++ b/src/main/resources/templates/member/cart.html
@@ -8,16 +8,15 @@
 </th:block>
 <th:block layout:fragment="css">
     <link rel="stylesheet" th:href="@{/css/cart/cart.css}">
-    <link rel="stylesheet" href="maincss.css">
+    <!-- <link rel="stylesheet" href="maincss.css"> -->
     <script th:src="@{/js/payment/payment.js}" defer="defer"></script>
 </th:block>
 
 <th:block layout:fragment="container">
-    <div class="contianer">
         <div class="main">
             <div class="title">
-                <h1 class="title"><span th:text="${member.memberNickName}" ></span>님 장바구니</h1>
-                <h1 class="title1"><span th:text="${member.memberId}"></span>회원번호</h1>
+                <h1 ><span th:text="${member.memberNickName}" class="title"></span>&nbsp;님 장바구니</h1>
+                <h1 ><span th:text="${member.memberId}" class="title"></span>&nbsp;회원번호</h1>
             </div>
             <table class="cartTable">
                 <thead>
@@ -59,17 +58,17 @@
 
                     <td>
                         <th:block th:each="product: ${productList}">
-                            <button id="payment-button" th:value="@{/payment/kakao/pg(productId=${product.id}, memberId=${member.memberId}, productPrice=${product.productPrice}, productName=${product.productName})}">
-                                결제
+                            <button class="buttonpa" id="payment-button" th:value="@{/payment/kakao/pg(productId=${product.id}, memberId=${member.memberId}, productPrice=${product.productPrice}, productName=${product.productName})}">
+                                결제하기
                             </button>
                         </th:block>
                     </td>
                 </tbody>
-                총가격 : <span th:text="${totalPrice}">총가격</span>
             </table>
-            <!-- 총가격 : <span th:text="${totalPrice}">총가격</span> -->
         </div>
-    </div>
+        <div class="price">
+                총가격 : <span th:text="${totalPrice}">총가격</span>
+            </div>
 </th:block>
 
 <!--<a th:href=@{"/payment/kakao/pg?{productId=123&memberId=123&productPrice=100000&productName=testProduct"}></a>-->
