--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -187,27 +187,9 @@ html{
   right: 1.64rem;
   width: 50px;
   height: 50px;
-  border: 2px solid #c5c5c5;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  box-shadow: #BAADFF 0px 25px 50px -10px,
-   #BAADFF 0px 15px 30px -15px,
-    #BAADFF 0px -1px 3px 0px inset;
+   background:url("/images/chatbot.png") no-repeat 50%/cover;
+   cursor:pointer;
 }
-.chatbot .nav{
-    align-items: center;
-}
-.chatbot .nav .chat{
-    display: flex;
-    align-items: center;
-    border: 2px red;
-  width: 85px;
-  height: 75px;
-}
-
 
 
 .container{
