--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,17 +3,19 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{fragments/layout/baseLayout}"
 >
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-<script th:src="@{/js/chatbot/chatbot.js}" defer></script>
 <th:block layout:fragment="title">
     <title>Cloth Keeper</title>
 </th:block>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <th:block layout:fragment="css">
     <link rel="stylesheet" th:href="@{/css/index.css}">
     <link rel="stylesheet" th:href="@{/css/main/mainSlider.css}">
     <link rel="stylesheet" href="maincss.css">
 </th:block>
 <th:block layout:fragment="script">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <script th:src="@{/js/chatbot/chatbot.js}" type="text/javascript" defer="defer"></script>
     <script th:src="@{/js/main/mainSlider.js}" defer></script>
 </th:block>
 <th:block layout:fragment="container">
@@ -40,12 +42,8 @@
         </div>
     </div>
 <!-- chatBot -->
-    <div class="chatbot">
-        <div class="nav">
-            <input type="image" th:src="@{/images/chatbot.png}" alt="" class="chat" id="thotbot" onclick="chatBotPop()">
-        </div>
+    <div class="chatbot" >
     </div>
-
     <div class="container">
         <div class="index">
             <div class="index-con">
