상품 detail에서 댓글 로그인한 사람만 작성 가능하도록 함

--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -106,7 +106,7 @@
     <button onclick="deleteReq()">삭제</button>
     <div class="reply-con">
         <div class="reply-write">
-            <form id="replyForm">
+            <form id="replyForm" sec:authorize="isAuthenticated()">
                 <input type="hidden" readonly name="productId" th:value="${product.id}" id="productId">
                 <ul>
                     <li>
