--- a/src/main/resources/templates/inquiry/detail.html
+++ b/src/main/resources/templates/inquiry/detail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
     <title>문의사항 상세 페이지</title>
@@ -63,7 +63,7 @@
                     <div class="title">
                         <h2>답변</h2>
                     </div>
-                    <div class="reply-write">
+                    <div class="reply-write" sec:authorize="hasAnyRole('ADMIN')">
                         <form id="replyForm">
                             <input type="hidden" readonly name="inqId"
                                    th:value="${inquiryDto.inqId}" th:id="inqId">
